we have learnt how to create images and links

--- a/index.html
+++ b/index.html
@@ -26,11 +26,24 @@
 
 <ol>
     <li>Dancing</li>
+    
     <li>fashion</li>
     <li>Coding</li>
     <li>gaming</li>
 </ol>
 
+<p><strong>this is</strong> <b>Redemptor</b></p>
+
+<h4>Ivy put a <i><b>laughing</b></i> Emoji</h4>
+
+<p>today is <em>going to</em> be a good day</p>
+<p>the 15<sup>th</sup> of september 2025</p>
+
+<img src="/sun.webp" alt="this the sun" width="100px">
+<img src="/sun 1.webp" width="200px">
+<img  width="500px" src="/kuvira.webp">
+
+<a href="https://www.linkedin.com/in/dempsy-redemptor-620698326/">Linkedin Profile</a>
 
 </body>
 </html>
