--- a/home.html
+++ b/home.html
@@ -42,7 +42,8 @@
         <button>Submit</button>
     
     <!--Form closes here-->
-
+    
+<body style="background-color:powderblue;"></body>
 
 </body>
 </html>
