--- a/practice2css.html
+++ b/practice2css.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice CSS</title>
+    <title>MY WEBSITE</title>
 </head>
-<body>
-    <h1 style="color: red"> CSS PRACTICE DAY 1</h1>
-    <p style="background-color: blue; ">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat quae voluptates ad accusamus rem. Dicta rem, eveniet velit quisquam magnam explicabo nam, placeat consectetur veritatis libero ab aliquid totam dolores?</p>
-    <p>This is CSS practice</p>
 
-    <h2>This is my sub-heading</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique debitis consequuntur necessitatibus, modi soluta obcaecati nesciunt accusamus exercitationem dolore pariatur? Reiciendis minus minima facere neque dignissimos sapiente, explicabo rem quod.</p>
-    <h2>This is my other sub-heading</h2>
+<body>
+    <h1><b>HOME OF REDEMPTOR'S SUPERMARKET</b></h1>
+    <h4>You are most welcome</h4>
+    <p>This website talks about what the supermarket is about</p>
+
+     
+
+    
 </body>
 </html>
